--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1756,8 +1756,8 @@ h3 {
 
 .experience .row {
 	margin-top: 30px;
-	padding: 0 0 40px 0;
-	overflow: hidden;
+	/*padding: 0 0 40px 0;*/
+	/*overflow: hidden;*/
 }
 
 .experience .row + .row {
@@ -1779,20 +1779,33 @@ h3 {
 }
 
 .experience .row .brief .company-name {
-	font-family: "Abril Fatface", serif;
-	font-size: 24px;
-
+	margin-top: 25px;
+	text-align: center;
+	font-family: 'Abril Fatface', monospace;
+	font-size: 30px;
+	color: #f91791;
 }
 
 .experience .row .brief .position {
-	font-family: "Abril Fatface", serif;
-	color: #f91791;
-	font-style: bold;
-	font-size: 24px;
-	padding: 10px 0 0 0;
 	text-align: center;
+	font-family: "Vidaloka", monospace;
+	line-height: 30px;
+	font-size: 24px;
+	/*padding: 10px 0 0 0;*/
+	text-align: left;
+	margin-right: 100px;
+	color: black;
 }
-
+.experience .row .brief li {
+	width: 100%;
+	list-style: none;
+	margin-left: 100px;
+	margin-right: 100px;
+	line-height: 24px;
+	font-size: 18px;
+	font-style: bold;
+	font-family: "Vidaloka", monospace;
+}
 .experience .row .brief span {
 	display: block;
 }
@@ -1835,7 +1848,6 @@ h3 {
 	font-family: 'Abril Fatface', monospace;
 	font-size: 30px;
 	color: #f91791;
-
 }
 
 .education .row .brief .position {
