--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -103,6 +103,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /*nav */
+
 #menuToggle a
 {
   text-decoration: none;
@@ -157,7 +158,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background: #f91791;
   border-radius: 3px;
 
-  z-index: 3;
+  z-index: 1;
 
   transform-origin: 4px 0px;
 
@@ -200,7 +201,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 #menu
 {
-	z-index: 11;
+
   position: absolute;
   width: 1600px;
 	height: 1600px;
@@ -506,7 +507,7 @@ a:visited{
 }
 
 
-#welcome #mainnav {
+/*#welcome #mainnav {
   position: absolute;
   font-family: 'Abril Fatface', serif;
   z-index: 99999;
@@ -524,9 +525,9 @@ a:visited{
   text-decoration: none;
   font-size: 3.5em;
 	z-index: 99999;
-}
+}*/
 
-#welcome .hamb {
+/*#welcome .hamb {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -547,7 +548,7 @@ a:visited{
   display: none;
   z-index: -1;
   background: rgba(0, 0, 0, 0.9);
-}
+}*/
 
 
 #welcome header {
@@ -679,6 +680,8 @@ body > section > .holder > .title h2:after {
 	padding-bottom: 23px;
 	/*position: absolute;*/
 }
+
+
 .align{
 	text-align: left;
 }
@@ -994,7 +997,7 @@ body > section > .holder > .title h2:after {
 	url('fonts/devicon.svg?-hdf3wh#devicon') format('svg');
 	font-weight: normal;
 	font-style: normal;
-	font-size: 100px;
+	/*font-size: 100px;*/
 }
 
 [class^="devicon-"], [class*=" devicon-"] {
@@ -1013,7 +1016,7 @@ body > section > .holder > .title h2:after {
 
 .devicon-css3-plain:hover {
 	color: #3d8fc6;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1021,14 +1024,14 @@ body > section > .holder > .title h2:after {
 .devicon-github-plain:before {
 	color: #fff;
 	content: "\e90b";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-github-original:hover,
 .devicon-github-plain:hover {
 	color: #181616;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1036,7 +1039,7 @@ body > section > .holder > .title h2:after {
 .devicon-heroku-original:before {
 	color: #fff;
 	content: "\e60b";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 
 }
@@ -1044,7 +1047,7 @@ body > section > .holder > .title h2:after {
 .devicon-heroku-plain:hover,
 .devicon-heroku-original:hover {
 	background: #6762a6;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1052,19 +1055,19 @@ body > section > .holder > .title h2:after {
 	background: #6762a6;
 	color: #fff;
 	content: "\e60f";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-angularjs-plain:before {
 	color: #fff;
 	content: "\e61d";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-angularjs-plain:hover {
 	color: #c4473a;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1073,37 +1076,37 @@ body > section > .holder > .title h2:after {
 .devicon-atom-plain:before {
 	color: #fff;
 	content: "\e624";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-atom-original:hover,
 .devicon-atom-plain:hover {
 	color: #67595D;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-git-plain:before {
 	color: #fff;
 	content: "\e7a8";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-git-plain:hover {
 	color: #f34f29;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-html5-plain:before {
 	color: #fff;
 	content: "\e7f7";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-html5-plain:hover {
 	color: #e54d26;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1111,21 +1114,21 @@ body > section > .holder > .title h2:after {
 .devicon-illustrator-line:before {
 	color: #fff;
 	content: "\e7f9";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-illustrator-plain:before {
 	color: #fff;
 	content: "\e7fa";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-illustrator-line:hover,
 .devicon-illustrator-plain:hover {
 	color: #faa625;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1133,25 +1136,25 @@ body > section > .holder > .title h2:after {
 .devicon-javascript-plain:before {
 	color: #fff;
 	content: "\e845";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-javascript-plain:hover {
 	color: #f0db4f;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-jquery-plain:before {
 	color: #fff;
 	content: "\e84a";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-jquery-plain:hover {
 	color: #0769ad;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1159,13 +1162,13 @@ body > section > .holder > .title h2:after {
 .devicon-mongodb-plain:before {
 	color: #fff;
 	content: "\eb44";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-mongodb-plain:hover {
 	color: #4FAA41;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1173,31 +1176,31 @@ body > section > .holder > .title h2:after {
 .devicon-mysql-plain:before {
 	color: #fff;
 	content: "\eb61";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-mysql-plain:hover {
 	color: #00618a;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-nodejs-plain:before {
 	color: #fff;
 	content: "\eb6a";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-nodejs-plain:hover {
 	color: #83CD29;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-photoshop-line:before {
 	color: #fff;
 	content: "\eb6c";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1209,31 +1212,31 @@ body > section > .holder > .title h2:after {
 .devicon-photoshop-line:hover,
 .devicon-photoshop-plain:hover{
 	color: #80b5e2;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-postgresql-plain:before {
 	color: #fff;
 	content: "\eb7d";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-postgresql-plain:hover{
 	color: #336791;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-php-plain:before {
 	color: #fff;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 
 }
 .devicon-php-plain:hover {
 	color: #6181b6;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-python-plain:before {
@@ -1248,13 +1251,13 @@ body > section > .holder > .title h2:after {
 .devicon-rails-plain:before {
 	color: #fff;
 	content: "\eba3";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .devicon-rails-plain:hover {
 	color: #a62c46;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1262,7 +1265,7 @@ body > section > .holder > .title h2:after {
 .devicon-ruby-plain:before {
 	color: #fff;
 	content: "\ebca";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1274,7 +1277,7 @@ body > section > .holder > .title h2:after {
 .devicon-sass-plain:before {
 	color: #fff;
 	content: "\ebcb";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-sass-original:hover,
@@ -1286,7 +1289,7 @@ body > section > .holder > .title h2:after {
 .devicon-wordpress-plain:before {
 	color: #fff;
 	content: "\ebfe";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .devicon-wordpress-plain:hover {
@@ -1324,7 +1327,7 @@ body > section > .holder > .title h2:after {
 .bitIcon-css:before {
 	content: "\e607";
 	color: #fff;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .bitIcon-html-sq:before {
@@ -1333,7 +1336,7 @@ body > section > .holder > .title h2:after {
 
 .bitIcon-html:before {
 	content: "\e60d";
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 	background: #8942d6;
 	color: #fff;
@@ -1362,40 +1365,40 @@ body > section > .holder > .title h2:after {
 
 .angular {
 	background: #c4473a;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .github{
 	background: #181616;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .atom {
 	background: #67595D;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .git {
 	background: #f34f29;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .html5 {
 	background: #e54d26;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .html {
 	background: #8942d6;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .css {
 	background: #80b5e2;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
@@ -1405,78 +1408,78 @@ body > section > .holder > .title h2:after {
 }
 .illustrator {
 	background: #faa625;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .php {
 	background-color: #6181b6;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .wordpress{
 	background-color: #494949;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .javascript {
 	background: #f0db4f;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .jquery {
 	background: #0769ad;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .mongodb {
 	background: #4FAA41;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .mysql {
 	background: #00618a;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .node {
 	background: #83CD29;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 
 .photoshop{
 	background: #80b5e2;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .postgresql{
 	background: #336791;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .rails {
 	background: #a62c46;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 
 .ruby {
 	background: #d91404;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .sass{
 	background: #cc6699;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 .wordpress {
 	background: #494949;
-	font-size: 100px;
+	/*font-size: 100px;*/
 	text-align: center;
 }
 h5{
@@ -1516,6 +1519,7 @@ circle skills
 .ch-item {
 	width: 100%;
 	height: 100%;
+	font-size: 100px;
 	border-radius: 50%;
 	position: relative;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
@@ -2513,6 +2517,15 @@ background-color: yellow;
 	cursor: pointer;
 }
 
+#resume .toggles button .current:after {
+	color: #fff;
+	background-color: #f91791;
+}
+
+#resume .toggles button .current a {
+	text-align: center;
+	color: #f91791;
+}
 
 #resume .links a {
 	margin: 0 0 12px 0 !important;
@@ -2545,6 +2558,15 @@ background-color: yellow;
 	margin: 0 8px 0 0;
 }
 
+
+.mask {
+  position: absolute;
+  width: 100%;
+	height: 100%;
+  z-index: 9000;
+  background-color: #000;
+  display: none;
+}
 .gal_btn1{
 	font-family: 'Abril Fatface', serif;
 	background-color: #fff;
@@ -2983,6 +3005,26 @@ span6:hover{
 	color: yellow;
 	text-shadow: 2px 2px 4px #f91791;
 }
+
+#resume .javascript {
+	background: #f0db4f;
+	font-size: 20px;
+	text-align: center;
+}
+
+#resume .devicon-javascript-plain:before {
+	color: #fff;
+	content: "\e845";
+	font-size: 20px;
+	text-align: center;
+}
+#resume .devicon-javascript-plain:hover {
+	color: #f0db4f;
+	font-size: 20px;
+	text-align: center;
+}
+
+
 #resume {
 	background-color: #fff;
 	padding: 80px 0 210px 0;
@@ -3009,6 +3051,42 @@ span6:hover{
 	color: #f91791;
 	font-size: 17px;
 }
+/*#resume .tech{
+	border-radius: 100%;
+	height: 25px;
+	weight:25px;
+}*/
+#resume .tech {
+	margin: 40px 0;
+}
+
+#resume .tech a i {
+	font-size: 24px;
+	-moz-border-radius: 100px;
+	-webkit-border-radius: 100px;
+	border-radius: 100px;
+	border: 2px solid #fff;
+	display: inline-block;
+	width: 55px;
+	height: 55px;
+	line-height: 55px;
+	margin: 0 5px;
+	-moz-transition: all 0.25s ease-in-out;
+	-o-transition: all 0.25s ease-in-out;
+	-webkit-transition: all 0.25s ease-in-out;
+	transition: all 0.25s ease-in-out;
+	color: #fff;
+}
+
+#resume .tech a i:hover {
+	background-color: #fff;
+	color: #f91791;
+}
+
+#resume .copy {
+	padding: 40px 0 0 0;
+}
+
 
 #contactMe {
 	background-color: #f91791;
@@ -3315,3 +3393,4 @@ span6:hover{
 		.loaded #loader-wrapper {
 			visibility: hidden;
 		}
+}
