--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -620,7 +620,6 @@ a:visited{
 
 #welcome .welcome .scroll-down {
 	font-size: 40px;
-	margin: 50px 0 0 0;
 }
 
 .scroll .nav-bar {
@@ -755,6 +754,15 @@ body > section > .holder > .title h2:after {
 }
 @media screen and (max-width: 320px){
 	.rw-sentence { font-size: 9px; }
+}
+h4{
+	text-align: center;
+	margin-top: 45px;
+	margin-bottom: 10px;
+	font-family: 'Abril Fatface', serif;
+	font-size: 22px;
+	line-height: 30px;
+	color: #fff;
 }
 
 #about {
@@ -988,6 +996,53 @@ body > section > .holder > .title h2:after {
 }
 
 /*SKILLS ICONS*/
+@font-face {
+  font-family: "untitled-font-2";
+  src:url("fonts/untitled-font-2.eot");
+  src:url("fonts/untitled-font-2.eot?#iefix") format("embedded-opentype"),
+    url("fonts/untitled-font-2.woff") format("woff"),
+    url("fonts/untitled-font-2.ttf") format("truetype"),
+    url("fonts/untitled-font-2.svg#untitled-font-2") format("svg");
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+[data-icon]:before {
+  font-family: "untitled-font-2" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "untitled-font-2" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-haml-2:before {
+	color: #fff;
+  content: "\61";
+}
+.icon-haml-2:hover {
+	color: #ecdfa7;
+  content: "\61";
+}
+
 @font-face {
 	font-family: 'devicon';
 	src:url('fonts/devicon.eot?-hdf3wh');
@@ -1295,7 +1350,17 @@ body > section > .holder > .title h2:after {
 .devicon-wordpress-plain:hover {
 	color: #494949;
 }
+.devicon-apache-line:before {
+	content: "\e627";
+}
 
+.devicon-apache-plain:before {
+	content: "\e629";
+}
+.devicon-apache-line.colored,
+.devicon-apache-plain.colored {
+	color: #303284;
+}
 @font-face {
 	font-family: 'bitIcon';
 	src:url('fonts/bitIcon.eot?dm333u');
@@ -1482,6 +1547,16 @@ body > section > .holder > .title h2:after {
 	/*font-size: 100px;*/
 	text-align: center;
 }
+
+.haml {
+	background: #ecdfa7;
+	text-align: center;
+}
+.apache {
+	background: #303284;
+	text-align: center;
+}
+
 h5{
 	font-family: "Vidaloka", monospace;
 	font-size: 20px;
@@ -1770,11 +1845,14 @@ h3 {
 }
 
 .experience .row img {
-	margin: 0 0 0 350px;
+	text-align: center;
+	padding-left: 375px;
+	padding-right: 325px;
+	/*margin: 0 0 0 350px;*/
 	/*margin-left: 100px;
 	margin-right: 100px;*/
-	/*display: inline-block;*/
-	/*float: left;*/
+	display: inline-block;
+
 }
 
 .experience .row .brief {
@@ -1800,11 +1878,30 @@ h3 {
 	margin-right: 100px;
 	color: black;
 }
-.experience .row .brief li {
-	width: 100%;
-	list-style: none;
-	margin-left: 100px;
+.experience .row .brief .position2 {
+	text-align: center;
+	font-family: "Vidaloka", monospace;
+	line-height: 30px;
+	font-size: 24px;
+	/*padding: 10px 0 0 0;*/
+	text-align: left;
 	margin-right: 100px;
+	color: black;
+}
+.experience .row .position2 li {
+	width: 100%;
+	list-style: circle;
+	margin-left: 300px;
+	margin-right: 100px;
+	line-height: 24px;
+	font-size: 18px;
+	font-style: bold;
+	font-family: "Vidaloka", monospace;
+}
+.experience .row .brief li {
+	width: 500px;
+	list-style: circle;
+	margin-left: 275px;
 	line-height: 24px;
 	font-size: 18px;
 	font-style: bold;
@@ -1896,35 +1993,25 @@ h3 {
 /*education*/
 
 /*testimonials*/
-h4{
-	text-align: center;
-	margin-top: 45px;
-	margin-bottom: 10px;
-	font-family: 'Abril Fatface', serif;
-	font-size: 22px;
-	line-height: 30px;
-	color: #fff;
-}
 
 #testimonials  .holder {
 	text-align: center;
-	width: 100%;
-	margin: 0 auto;
-	color: #f91791;
+	width: 1000px;
+	margin: 50px;
 }
-#testimonials  .testimonial {
+/*#testimonials  .testimonial {
 	text-align: center;
 	line-height: 34px;
 	color: #f91791;
 	width: 100%;
-}
+}*/
 #testimonials  .testimonial .quote {
 	font-family: "Playfair Display", monospace;
 	margin:20px 20px 20px 20px;
 	font-size: 24px;
 	padding: 50px 50px 50px 50px;
-	width: 100%;
-	color: #f91791;
+	width: 800px;
+	color: #000;
 	text-align: center;
 }
 #testimonials .testimonial .client-info {
